2000-10-09  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* config/i386/i386sol2.mh:  Add XM_CLIBS definition to resolve
	reference to gethostbyname.

2000-10-06  Kevin Buettner  <kevinb@redhat.com>

	* remote-eb.c (eb_xfer_inferior_memory): Protoize.
	* remote-es.c (es1800_xfer_inferior_memory, es1800_files_info):
	Protoize.
	* remote-mm.c (expect_msg): Protoize.

2000-10-04  Kevin Buettner  <kevinb@redhat.com>

	* rs6000-tdep.c (skip_prologue): Add new parameter lim_pc.
	Update all callers.

2000-10-03  Kevin Buettner  <kevinb@redhat.com>

	* remote-bug.c (bug_xfer_memory, bug_insert_breakpoint,
	bug_remove_breakpoint): Protoize.
	* remote-e7000.c (fetch_regs_from_dump, e7000_xfer_inferior_memory):
	Protoize.

2000-10-01  Kevin Buettner  <kevinb@redhat.com>

	* remote-adapt.c (adapt_insert_breakpoint, adapt_remove_breakpoint):
	Protoize.
	* remote-array.c (write_monitor, array_xfer_memory): Protoize.

2000-09-29  Kevin Buettner  <kevinb@redhat.com>

	* ppc-linux-nat.c (supply_gregset, fill_gregset): Change type
	of first argument from gregset_t to gdb_gregset_t in order
	to match declarations in gregset.h.
	(supply_fpregset, fill_fpregset): Change type of first argument
	from fpregset_t to gdb_fpregset_t in order to match declarations
	in gregset.h.

2000-09-29  Kevin Buettner  <kevinb@redhat.com>

	* procfs.c (proc_iterate_over_mappings, proc_iterate_over_threads,
	procfs_xfer_memory): Protoize.
	* ptx4-nat.c (proc_iterate_over_mappings): Protoize.

2000-09-28  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* sol-thread.c (ps_pdmodel):  Return PR_MODEL_UNKNOWN instead of
	PS_ERR if exec_bfd is not yet open.

2000-09-28  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* target.c (target_signal_from_host, do_target_signal_to_host):
	Add support for Solaris realtime signals.

2000-09-27  Kevin Buettner  <kevinb@redhat.com>

	* os9kread.c (os9k_symfile_read, os9k_end_psymtab): Protoize.
	* osfsolib.c (find_solib): Protoize.
